--- a/css.css
+++ b/css.css
@@ -1,3 +1,12 @@
+		#c{
+			white-space: nowrap;
+			overflow: auto;
+			width:100%;
+			height:20%;
+			font-size:smaller;
+			min-height:300px;
+			font-family:monaco, "Lucida Console", Courier, monospace;
+		}
 		#table {
 			font-family: "Computer Modern", sans-serif;
 			margin-top:4px;
