--- a/css.css
+++ b/css.css
@@ -199,7 +199,10 @@
 		}
 
 		td[data-diagonal], #extract-div td[style*=mso-diagonal-down] {
-			background: linear-gradient(to right top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 49.9%, #000000 50%, #000000 51%, rgba(255, 255, 255, 0) 51.1%, rgba(255, 255, 255, 0) 100%);
+			background-image: linear-gradient(to right top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 49.999%, #000000 50%, #000000 51%, rgba(255, 255, 255, 0) 51.0001%, rgba(255, 255, 255, 0) 100%);
+		}
+		td[data-diagonal][data-selected]{
+			background-image: linear-gradient(to right top, rgba(50,151,253,0.5) 0%, rgba(50,151,253,0.5) 49.9%, #000000 50%, #000000 51%, rgba(50,151,253,0.5) 51.1%, rgba(50,151,253,0.5) 100%);
 		}
 		td[data-diagonal] div[contenteditable] {
 			text-align: left;
@@ -347,28 +350,13 @@
 		}
 		
 		body:not([data-view-editor]) #table td[data-selected]{
-			overflow:hidden;
+			//overflow:hidden;
 }
 		body:not([data-view-editor]) #table td[data-selected] div.outer {
-			position:relative;
+			//position:relative;
 		}
 		body:not([data-view-editor]) #table td[data-selected] div[contenteditable] {
-			position: relative;
-			z-index:100;
 			color:black;
-			color:HighlightText;
-		}
-		body:not([data-view-editor]) #table td[data-selected] div.outer:before {
-			content: "";
-			position: absolute;
-			background:whitesmoke;
-			background:highlight;
-			z-index: 2;
-			opacity:0.5;
-			left: -9999px;
-			bottom: -9999px;
-			top: -9999px;
-			right: -9999px;
 		}
 
 		#table td,
@@ -376,8 +364,61 @@
 			margin: 0;
 			padding: 0;
 		}
-
+		.border-line{
+			border-top:1px dashed black;
+			transform-origin: top left;
+			z-index:9999;
+			display:none;
+			position:absolute;
+			width:100px;
+			height:5px;
+		}
 		body:not([data-view-editor]) #table td[data-selected]:not([data-two-diagonals]):not([data-diagonal]) {
-//			background: highlight;
+			background-image:linear-gradient(rgba(50,151,253,0.5),rgba(50,151,253,0.5));	
 			height:auto !important;
 		}
+		.nav-latex{
+			background-color:white;
+			z-index:945;
+			position:sticky;
+			top:0;
+			padding-top:3px;
+		}
+		/* Color Picker */
+		#colorpicker-name{
+			background-image:linear-gradient(to right, white, white 49.99%, black 50%);
+			text-align:center;
+			font-weight:bold;
+			padding:1rem 0;
+			font-size:150%;
+		}
+		.color-scheme{
+			display:flex;
+			flex-wrap:wrap;
+			margin:5px 0;
+		}
+		.color-scheme > div{
+			margin:2px;
+			cursor:pointer;
+			width:30px;
+			height:30px;
+			border:2px solid black;
+		}
+		.color-scheme > div:hover{
+			border-color:gray;
+		}
+		#colorpicker-container{
+			background-color:currentColor;
+			padding:2rem 10rem;
+		}
+@keyframes highlight {
+  0% {
+    background: red
+  }
+  100% {
+    background: none;
+  }
+}
+#support-us.active{
+	animation:highlight 1s;
+}
