--- a/css.css
+++ b/css.css
@@ -197,7 +197,13 @@
 		td[data-align="r"] {
 			text-align: right;
 		}
-
+		#extract-div{
+			height:auto;
+			min-height:200px;
+			margin-bottom:2px;
+			max-height:300px;
+			overflow:auto;
+		}
 		td[data-diagonal], #extract-div td[style*=mso-diagonal-down] {
 			background-image: linear-gradient(to right top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 49.999%, #000000 50%, #000000 51%, rgba(255, 255, 255, 0) 51.0001%, rgba(255, 255, 255, 0) 100%);
 		}
@@ -382,6 +388,7 @@
 			z-index:945;
 			position:sticky;
 			top:0;
+			left:0;
 			padding-top:3px;
 		}
 		/* Color Picker */
@@ -421,4 +428,86 @@
 }
 #support-us.active{
 	animation:highlight 1s;
+}
+
+/* Bootstrap submenus */
+/* Source : https://stackoverflow.com/a/18024991/8022172 */
+
+.dropdown-submenu {
+    position:relative;
+}
+.dropdown-submenu>.dropdown-menu {
+    top:0;
+    left:100%;
+    margin-top:-6px;
+    margin-left:-1px;
+    -webkit-border-radius:0 6px 6px 6px;
+    -moz-border-radius:0 6px 6px 6px;
+    border-radius:0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+    display:block;
+}
+.dropdown-submenu>a:after {
+    display:block;
+    content:" ";
+    float:right;
+    width:0;
+    height:0;
+    border-color:transparent;
+    border-style:solid;
+    border-width:5px 0 5px 5px;
+    border-left-color:#cccccc;
+    margin-top:5px;
+    margin-right:-10px;
+}
+.dropdown-submenu:hover>a:after {
+    border-left-color:#ffffff;
+}
+.dropdown-submenu.pull-left {
+    float:none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left:-100%;
+    margin-left:10px;
+    -webkit-border-radius:6px 0 6px 6px;
+    -moz-border-radius:6px 0 6px 6px;
+    border-radius:6px 0 6px 6px;
+}
+/* LaTeX Logo*/
+.latex-logo{
+	font-size:30px;
+	vertical-align:top;
+	display:inline-block;
+	line-height:70px;
+	padding-left:5px;
+}
+.latex-a{
+	font-size: 75%;
+    vertical-align: 0.45ex;
+    margin-left: -0.36em;
+    margin-right: -0.125em;
+	text-transform:uppercase;
+}
+.latex-e{
+display: inline-block;
+    font-size: 87%;
+    line-height: 0;
+    text-transform: uppercase;
+    vertical-align: -0.45ex;
+margin-left:-0.15em;
+margin-right:-0.07em;
+}
+/* Follow*/
+.nav-latex .dropdown{
+margin-bottom:4px;
+}
+.nav-latex a.dropdown-toggle{
+padding:4px 4px;
+border-radius:3px;
+margin-bottom:12px;
+}
+.nav-latex a.dropdown-toggle:focus,.nav-latex a.dropdown-toggle:hover{
+text-decoration:none;
+background-color:#eee;
 }
