--- a/css.css
+++ b/css.css
@@ -13,6 +13,19 @@
 			min-height:300px;
 			font-family:monaco, "Lucida Console", Courier, monospace;
 		}
+		#worksheet-drop{
+			padding:10px;
+			margin:5px;
+			border:3px dashed #333;
+			background:whitesmoke;
+			text-align:center;
+		}
+		#worksheet-drop input[type=file]{
+			display:initial;
+		}
+		#worksheet-drop.dragover{
+			border-color:#337ab7;
+		}
 		.glyphicon.glyphicon-dot:before {
 		    content: "\25cf";
 		}
