--- a/css.css
+++ b/css.css
@@ -321,7 +321,15 @@
 			height:100%;
 			overflow-y:auto;
 		}
-
+		#tooltip-helper{
+			position:absolute;
+			display:none;
+			background:white;
+			border:1px solid silver;
+			z-index:9900;
+			padding:2px;
+			box-shadow: 3px 3px 6px 0px rgba(204,204,204,0.8);
+		}
 		#properties,
 		#borders {
 			margin: 5px;
