--- a/v2/css.css
+++ b/v2/css.css
@@ -7,16 +7,6 @@
 				white-space: nowrap !important;
 			}
 		}
-		#overlay{
-			display:none;
-			position:fixed;
-			left:0;
-			right:0;
-			top:0;
-			bottom:0;
-			z-index:999999;
-			cursor:grabbing;
-		}
 		#table-div-container{
 			width:100%;
 			overflow-x:auto;
@@ -291,6 +281,11 @@
 			text-align: right !important;
 		}
 
+		body:not([data-view-editor]) #table td[data-rotated]:not([data-selected]) div.outer {
+			display:table-cell;
+			height:100%;
+		}
+
 		#popup_new {
 			z-index: 9999;
 			background: white;
@@ -404,20 +399,20 @@
 		/* List */
 
 			/* Level 2 */
-			#table :not(ul, li) > ul > li > ul > li::marker,
-			#table :not(ul, li) > ul > ul > li::marker{
+			:not(ul, li) > ul > li > ul > li::marker,
+			:not(ul, li) > ul > ul > li::marker{
 				content:"\2014";
 			}
-			#table :not(ul, li) > ul > ul li, :not(ul, li) > ul > li > ul li{padding-left:0.6ex;}
+			:not(ul, li) > ul > ul li, :not(ul, li) > ul > li > ul li{padding-left:0.6ex;}
 			
 
 			/* Level 3 */
-			#table :not(ul, li) > ul > ul > ul > li::marker
+			:not(ul, li) > ul > ul > ul > li::marker
 			{
 				content:"\2217";
 			}
 			/* Level 4 */
-			#table :not(ul, li) > ul > ul > ul > ul > li::marker
+			:not(ul, li) > ul > ul > ul > ul > li::marker
 			{
 				content:"\00B7";
 			}
@@ -549,16 +544,10 @@
 			padding-bottom: 0.4ex;
 		}
 
-		@supports (writing-mode: sideways-lr) {
-			#table td[data-rotated] div[contenteditable]{
-				writing-mode: sideways-lr;
-			}
-		}
-		@supports not (writing-mode: sideways-lr) {
-			#table td[data-rotated] div[contenteditable]{
-				writing-mode: vertical-lr;
-				transform: rotate(180deg);
-			}
+
+		#table td[data-rotated]:not([data-selected]) div[contenteditable],
+		body[data-view-editor] #table td[data-rotated] div[contenteditable] {
+			transform: rotate(-90deg);
 		}
 		
 
@@ -1019,14 +1008,10 @@ border:none;
 text-align:center;
 background:whitesmoke;
 vertical-align:middle;
-cursor:grab;
 }
 #table tr:first-child td::before{
 content:counter(table-col, upper-alpha);
 counter-increment:table-col;
-}
-#table tr:first-child td.moveTargetX{
-	border-right:2px solid red;
 }
 body[data-view-editor] tr:first-child{
 	display:none;
@@ -1040,12 +1025,6 @@ body:not([data-view-editor]) #table tr:not(:empty)::before{
 	display:table-cell;
 	border-bottom:2px solid transparent !important;
 	vertical-align:middle;
-}
-body:not([data-view-editor]) #table tr.moveTargetY:not(:empty)::before{
-	border-bottom:2px solid red !important;
-}
-body:not([data-view-editor]) #table tr.moveTargetX:not(:empty):first-child::before{
-	border-right:2px solid red;
 }
 body:not([data-view-editor]) #table tr:not(:empty):first-child::before{
 	color:transparent;
